ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: "www.s5.zzz"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: main
            port:
              number: 80
  - host: "www.cat.zzz"
    http:
      paths:
      - pathType: Prefix
        path: 
        backend:
          service:
            name: tomcat
            port:
              number: 8080
