ingress/ingress-paths.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:
  name: ingress-hosts 
spec:
  rules: 
  - host: "www.s5.zzz" 
    http:
      paths:
      - pathType: Prefix
        path: "/page1"
        backend:
          service:
            name: webx 
            port:
              number: 80 
      - pathType: Prefix
        path: "/page2"
        backend:
          service:
            name: main
            port:
              number: 80
      - pathType: Prefix
        path: "/page3"
        backend:
          service:
            name: web1
            port:
              number: 80
